--- a/easeart/src/Global.css
+++ b/easeart/src/Global.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap');
+
+
 .login-box{
     display: flex;
     flex-direction: column;
@@ -14,5 +17,63 @@
 }
 
 body{
-    background-color: white;
+    background-color: #F6F6F6;
+    
 }
+
+
+.card-text{
+    font-family: 'Nunito', sans-serif;
+}
+
+.card-box-tools{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+.header-dash{
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    min-height: 10px;
+    background-color: #1960E9;
+}
+
+.controls{
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    background-color: #F6F6F6;
+}
+
+.stats{
+    width: 100%;
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+}
+
+.stats-each{
+    display: flex;
+    flex-direction: row;
+   background-color: #ddd2ff;
+    padding: 10px;
+    border-radius: 5px;
+    margin-left: 10px;
+}
+
+.stats-each .text{
+    margin-right: 10px;
+}
+
+.bgRed{
+    background-color: #ffeac3;
+}
+
+.disable-select {
+    user-select: none;
+    -webkit-touch-callout: none;
+  }
+  
